middlewares/jwt/entraid/tickets/route-tls.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tickets-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`tickets.airlines.EXTERNAL_IP.sslip.io`)
      services:
        - name: tickets-app
          port: 3000
      middlewares:
        - name: jwt-entra-id
