middlewares/jwt/entraid/tickets/route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tickets-ingress
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`tickets.airlines.traefik`) || Host(`tickets.airlines.traefik.localhost`)
      services:
        - name: tickets-app
          port: 3000
      middlewares:
        - name: jwt-entra-id
